# auto_db_backup

./: LICENSE  README.md  pyproject.toml
Dtabase_backup_files/: user_customers_20240929_220113.sql  user_transactions_20240929_220113.sql
auto_db_backup/: auto_backup_services.py  auto_db_backup.py  backup.py  backup__mariadb.py  backup__mongodb.py  backup__mysql.py  backup__oracledb.py  backup__postgresql.py  backup__sqlite3.py  backup__sqlserver.py  backup__sybase.py  backup__teradata.py  db_backup.py  main.py  practice.py  slack_notification_services.py  storage_option.py
tests/: test_main.py
